# plpygis

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: pythonpackage.yml
doc/: Makefile  release.md
doc/source/: conf.py  examples.rst  index.rst  installation.rst  plpygis.rst  plpython.rst  subclasses.rst  usage.rst
plpygis/: __init__.py  exceptions.py  geometry.py  hex.py  lwgeom.py  wkt.py
src/plpygis/: __init__.py  exceptions.py
test/: __init__.py  __main__.py  test_geometry.py
test/plpygis/: __init__.py  geometry.py  lwgeom.py
